--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,9 @@ body#page-question-type-flashcard div[id^=fitem_id_] .fitemtitle {
     max-height: 10000000px;
   }
 }
+.qflashcard-flipcontainer .btn {
+  border: 0;
+}
 
 .flipped .qflashcard-iwasrightbutton {
   background-color: green;
