changed javascript to use one function for the flipping

--- a/templates/questionview.mustache
+++ b/templates/questionview.mustache
@@ -1,25 +1,27 @@
-<div class="qflashcard-flipper d-flex flex-column">
-    <div class="qtext qflashcard-question align-self-stretch">
-        {{{questiontext}}}
-    </div>
-    <div class="ablock qflashcard-ablock align-self-stretch">
-        <div class="answer">
-            <div class="qanswer qflashcard-answer qflashcard-flipin">
-                {{{answer}}}
+<div class="qflashcard-flipcontainer" id="qflashcard-flipcontainer-{{qaid}}">
+    <div class="qflashcard-flipper d-flex flex-column">
+        <div class="qtext qflashcard-question align-self-stretch">
+            {{{questiontext}}}
+        </div>
+        <div class="ablock qflashcard-ablock align-self-stretch">
+            <div class="answer">
+                <div class="qanswer qflashcard-answer qflashcard-flipin">
+                    {{{answer}}}
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="row no-gutters mt-2">
-    <button class="qflashcard-flipbutton btn btn-primary" id="{{flipid}}">
-        {{fliptext}}
-    </button>
-</div>
-<div class="row d-inline-flex no-gutters mt-3">
-    <button class="qflashcard-iwasrightbutton btn btn-primary qflashcard-flipin mr-3" id="{{iwasrightid}}">
-        {{{iwasrighttext}}}
-    </button>
-    <button class="qflashcard-iwaswrongbutton btn btn-primary qflashcard-flipin" id="{{iwaswrongid}}">
-        {{{iwaswrongtext}}}
-    </button>
+    <div class="row no-gutters mt-2">
+        <a class="qflashcard-flipbutton btn btn-primary" id="qflashcard-flipbutton-{{qaid}}" onclick="$.qtype_flashcard_toggle_flipped({{qaid}})">
+            {{fliptext}}
+        </a>
+    </div>
+    <div class="row d-inline-flex no-gutters mt-3">
+        <button class="qflashcard-iwasrightbutton btn btn-primary qflashcard-flipin mr-3" id="qflashcard-iwasrightbutton-{{qaid}}">
+            {{{iwasrighttext}}}
+        </button>
+        <button class="qflashcard-iwaswrongbutton btn btn-primary qflashcard-flipin" id="qflashcard-iwaswrongbutton-{{qaid}}">
+            {{{iwaswrongtext}}}
+        </button>
+    </div>
 </div>
